Fix many memory leaks
i just want to talk, This session of fixing the memory leaks has tought
me a lot and please if you figure some other memory leaks or erros that
i might over looked please let me know :)

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@
 CC = gcc
 
 # Compiler flags (optional)
-CFLAGS = -Wall -g
+CFLAGS =  -g -Wall -Wextra -fsanitize=address -fsanitize=undefined -fstack-protector-strong -D_FORTIFY_SOURCE=2 -fPIE -pie -z relro -z now 
 
 # Libraries to link with (OpenSSL)
 LIBS = -lssl -lcrypto
